--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,36 @@
 alembic==1.13.2
 aniso8601==9.0.1
+black==24.8.0
 blinker==1.8.2
 click==8.1.7
+dnspython==2.6.1
 Flask==3.0.3
+Flask-Cors==5.0.0
 Flask-JWT-Extended==4.6.0
 Flask-Migrate==4.0.7
+Flask-PyMongo==2.3.0
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
+gunicorn==23.0.0
 importlib_metadata==8.4.0
 importlib_resources==6.4.4
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
+mypy==1.11.2
+mypy-extensions==1.0.0
+packaging==24.1
+pathspec==0.12.1
+platformdirs==4.3.2
 psycopg2-binary==2.9.9
 PyJWT==2.9.0
+pymongo==4.8.0
 pytz==2024.1
+ruff==0.6.3
 six==1.16.0
 SQLAlchemy==2.0.32
+tomli==2.0.1
 typing_extensions==4.12.2
 Werkzeug==3.0.4
 zipp==3.20.0
