--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,4 +17,24 @@ services:
             POSTGRES_DB: delivery
         ports:
             - "5432:5432"
-   
+    keycloak:
+        image: quay.io/keycloak/keycloak:23.0.6
+        command: start
+        environment:
+            KC_HOSTNAME: localhost
+            KC_HOSTNAME_PORT: 8080
+            KC_HOSTNAME_STRICT_BACKCHANNEL: false
+            KC_HTTP_ENABLED: true
+            KC_HOSTNAME_STRICT_HTTPS: false
+            KC_HEALTH_ENABLED: true
+            KEYCLOAK_ADMIN: ${KEYCLOAK_ADMIN}
+            KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD}
+            KC_DB: postgres
+            KC_DB_URL: jdbc:postgresql://postgres/delivery
+            KC_DB_USERNAME: user
+            KC_DB_PASSWORD: pass
+        ports:
+            - 8080:8080
+        restart: always
+        depends_on:
+            - postgres
