feat: add keycloak as identity manager

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,8 @@ services:
             KC_HTTP_ENABLED: true
             KC_HOSTNAME_STRICT_HTTPS: false
             KC_HEALTH_ENABLED: true
-            KEYCLOAK_ADMIN: ${KEYCLOAK_ADMIN}
-            KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD}
+            KEYCLOAK_ADMIN: admin
+            KEYCLOAK_ADMIN_PASSWORD: admin
             KC_DB: postgres
             KC_DB_URL: jdbc:postgresql://postgres/delivery
             KC_DB_USERNAME: user
