--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
 dnspython==2.6.1
+exceptiongroup==1.2.2
 Flask==3.0.3
 Flask-Cors==5.0.0
 Flask-JWT-Extended==4.6.0
@@ -17,6 +18,7 @@ gunicorn==23.0.0
 idna==3.10
 importlib_metadata==8.4.0
 importlib_resources==6.4.4
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
@@ -26,9 +28,11 @@ mypy-extensions==1.0.0
 packaging==24.1
 pathspec==0.12.1
 platformdirs==4.3.2
+pluggy==1.5.0
 psycopg2-binary==2.9.9
 PyJWT==2.9.0
 pymongo==4.8.0
+pytest==8.3.3
 pytz==2024.1
 requests==2.32.3
 ruff==0.6.3
