--- a/.github/workflows/deploy-feature.yml
+++ b/.github/workflows/deploy-feature.yml
@@ -27,10 +27,8 @@ jobs:
         with:
           python-version: 3.8
 
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          version: 1.6.1
+      - name: Install Dependencies
+        run: make install
 
       - name: Run tests
         run: make test
