--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
         image: quay.io/keycloak/keycloak:23.0.6
         command: start
         environment:
-            KC_HOSTNAME: localhost
+            KC_HOSTNAME: 127.0.0.1
             KC_HOSTNAME_PORT: 8080
             KC_HOSTNAME_STRICT_BACKCHANNEL: false
             KC_HTTP_ENABLED: true
