--- a/.github/workflows/deploy-feature.yml
+++ b/.github/workflows/deploy-feature.yml
@@ -13,6 +13,9 @@ jobs:
       name: Run tests
       runs-on: ubuntu-latest
 
+      env:
+        KEYCLOAK_ADMIN_USER: ${{ secrets.KEYCLOAK_ADMIN_USER }}
+        KEYCLOAK_ADMIN_PASS: ${{ secrets.KEYCLOAK_ADMIN_PASS }}
       steps:
       - name: Clone repository
         uses: actions/checkout@v3
