--- a/.github/workflows/deploy-feature.yml
+++ b/.github/workflows/deploy-feature.yml
@@ -13,17 +13,15 @@ jobs:
       name: Run tests
       runs-on: ubuntu-latest
 
+      env:
+        KEYCLOAK_ADMIN_USER: ${{ secrets.KEYCLOAK_ADMIN_USER }}
+        KEYCLOAK_ADMIN_PASS: ${{ secrets.KEYCLOAK_ADMIN_PASS }}
       steps:
       - name: Clone repository
-        uses: actions/checkout@v3
-
-      # - name: Configure GitHub credentials
-      #   uses: de-vri-es/setup-git-credentials@v2
-      #   with:
-      #     credentials: ${{ secrets.GH_TOKEN_GLOBAL }}
+        uses: actions/checkout@v4
 
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: 3.8
 
