--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,11 @@ services:
         environment:
             MONGO_INITDB_ROOT_USERNAME: user
             MONGO_INITDB_ROOT_PASSWORD: pass
+            MONGO_INITDB_DATABASE: delivery
         ports:
-        - "27017:27017"
+            - "27017:27017"
+        volumes:
+            - ./scripts/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
     postgres:
         container_name: postgres
         image: postgres:alpine
