--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 alembic==1.13.2
 aniso8601==9.0.1
+APScheduler==3.10.4
+backports.zoneinfo==0.2.1
 black==24.8.0
 blinker==1.8.2
 certifi==2024.8.30
@@ -40,6 +42,7 @@ six==1.16.0
 SQLAlchemy==2.0.32
 tomli==2.0.1
 typing_extensions==4.12.2
+tzlocal==5.2
 urllib3==2.2.3
 Werkzeug==3.0.4
 zipp==3.20.0
