--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,22 @@ services:
         environment:
             MONGO_INITDB_ROOT_USERNAME: user
             MONGO_INITDB_ROOT_PASSWORD: pass
+            MONGO_INITDB_DATABASE: delivery
         ports:
-        - "27017:27017"
+            - "27017:27017"
+        volumes:
+            - ./scripts/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
     postgres:
         container_name: postgres
-        image: postgres
+        image: postgres:alpine
         environment:
             POSTGRES_USER: user
             POSTGRES_PASSWORD: pass
-            POSTGRES_DB: delivery
+            POSTGRES_MULTIPLE_DATABASES: delivery,identity_manager
         ports:
             - "5432:5432"
+        volumes:
+            - ./scripts/db-init.sh:/docker-entrypoint-initdb.d/db-init.sh
     keycloak:
         image: quay.io/keycloak/keycloak:23.0.6
         command: start
@@ -30,7 +35,7 @@ services:
             KEYCLOAK_ADMIN: admin
             KEYCLOAK_ADMIN_PASSWORD: admin
             KC_DB: postgres
-            KC_DB_URL: jdbc:postgresql://postgres/delivery
+            KC_DB_URL: jdbc:postgresql://postgres/identity_manager
             KC_DB_USERNAME: user
             KC_DB_PASSWORD: pass
         ports:
